# BlockChain

Ethereum_Smarcontracts/: README.md
Ethereum_Smarcontracts/Dapps/: DevNotes.txt  Infura_Ridef.txt  README.MD  ResponsibleBox.sol  config.py  gettrcount.sh  pay.py  pay.sh  send.py  send.sh
Ethereum_Smarcontracts/Tokens/: ERC20  TheCoin1.sol  TheCoin2.sol
Smarcontract_Lottery_Frontend/: package.json
Smarcontract_Lottery_Frontend/components/: LotteryEntrance.js  ManualHeader.js
Smarcontract_Lottery_Frontend/constants/: abi.json  contractAddresses.json
Smarcontract_Lottery_Frontend/pages/: _app.js  index.js
Solana_minimal_smarcontract/: Cargo.toml  README.md
Solana_minimal_smarcontract/src/: lib.rs
nextjs-smarcontract-lottery-fcc/: package.json
nextjs-smarcontract-lottery-fcc/components/: LotteryEntrance.js  ManualHeader.jsx
nextjs-smarcontract-lottery-fcc/constants/: abi.json
nextjs-smarcontract-lottery-fcc/pages/: index.js
