
[package]
name = "VersifyContract"
version = "0.1.0"
description = "Simple and Flexible Smart Contract for Versify "
edition = "2021"
authors =["neo-vortex"]
[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
